crates/toml_edit/tests/snapshots/invalid/table/array-no-close-02.stderr
TOML parse error at line 1, column 27
  |
1 | [[closing-bracket.missing]
  |                           ^
unclosed array table, expected `]`
